# markdown-tools

./: .gitignore  Cargo.toml  README.md  cor.md  markdown-tools.code-workspace  rhea.css
codeblock-button-inserter/: Cargo.toml  README.md  test.md  test1.html  test1.md
codeblock-button-inserter/src/: main.rs
codeblock-processor/: Cargo.toml  blob.md  snippets.json  test.md
codeblock-processor/src/: blur_button.html  main.rs  make_path.html  meta_refresh.html
codeblock-processor/src/processor/: mod.rs  playground_button_inserter.rs  snippet_button_inserter.rs
demo/: .gitignore  demo.md  final.html  final.md  justfile  linkify.toml  processed.html  processed.md  snippets.json
demo/code/: demo.rs
demo/demo/: demo.rs
linkify/: .gitignore  Cargo.toml  README.md  justfile  linkify.toml
linkify/src/: lib.rs  link.rs  link_aggregator.rs  main.rs
linkify/src/replace/: empty_playground_iframe.html  empty_playground_inserter.rs  mod.rs
linkify/src/transform/: docs_rustlang_replacer.rs  docsrs_replacer.rs  mod.rs  substitution.rs
linkify/tests/: input1.md  linkify.rs  output1.md
markdown-linkify/: .gitignore  Cargo.toml  README.md  linkify.toml  test.md
markdown-linkify/src/: aggregation.rs  aggregator.rs  config.rs  docs_rustlang_replacer.rs  docsrs_replacer.rs  lib.rs  link.rs  link_aggregator.rs  linkify.rs  main.rs  replacer.rs
markdown-linkify/src/transform/: docs_rustlang_replacer.rs  docsrs_replacer.rs  mod.rs  regex.rs  substitution.rs
markdown-linkify/tests/: linkify.rs  linkify_test.rs
markdown-normalizer/: Cargo.toml
markdown-normalizer/src/: main.rs
markdown-snippet-inserter/: Cargo.toml  README.md  example.md  processed.md  snippets.json  test.md  test2.md
markdown-snippet-inserter/src/: main.rs
markdown-snippet-inserter/src/processor/: mod.rs  snippet_button_inserter.rs
normalizer/: Cargo.toml  README.md  test.md
normalizer/src/: main.rs
snippet/: Cargo.toml
snippet-extractor/: Cargo.toml  README.md  snippets.json
snippet-extractor/src/: lib.rs  main.rs  parser.rs  snippets.pest
snippet-extractor/testdir/testdir2/: main copy.rs2  main.rs  main.rs2
snippet-extractor/tests/: cli.rs  nested  overlapping  test1.json
snippet-extractor/tests/rust_files/: parser.rs
snippet-extractor/tests/rust_files/more/: main copy.rs2  main.rs
snippet/src/: lib.rs
src/: main.rs
