[package]
name = "snippet-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
pest = "2.6.0"
pest_derive = "2.6.0"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
walkdir = "2.3.3"
#rustfmt-nightly = { git = "https://github.com/rust-lang/rustfmt" }
