[package]
name = "markdown-codeblock-processor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Modify code snippets in markdown files, for example by adding a playground button or a vscode-open button"
repository = "https://github.com/barafael/markdown-tools"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
itertools = "0.12.1"
pulldown-cmark = "0.10.3"
pulldown-cmark-to-cmark = "13.0.0"
serde = "1.0.188"
serde_json = "1.0.105"
snippet-extractor = { path = "../snippet-extractor" }
take-until = "0.2.0"
textwrap = "0.16.0"
urlencoding = "2.1.3"
