[package]
name = "markdown-linkify"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Markdown preprocessor for substiting link shorthands to valid links according to configurable regexes and custom substitution implementations"
repository = "https://github.com/barafael/markdown-tools"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.3"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
dyn-clone = "1.0.13"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.0"
regex = { version = "1.9.4" }
reqwest = { version = "0.11.20", features = ["blocking"] }
select = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_regex = "1.1.0"
tempfile = "3.8.0"
toml = "0.7.6"
