[package]
name = "markdown-snippet-inserter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "10.0.4"
serde = "1.0.171"
serde_json = "1.0.100"
snippet = { path = "../snippet" }
textwrap = "0.16.0"
