[package]
name = "markdown-snippet-inserter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Modify code snippets in markdown files, for example by adding a playground button or a vscode-open button"
repository = "https://github.com/barafael/markdown-tools"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.16", features = ["derive"] }
itertools = "0.11.0"
once_cell = "1.18.0"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.0"
serde = "1.0.171"
serde_json = "1.0.103"
snippet = { path = "../snippet" }
take-until = "0.2.0"
textwrap = "0.16.0"
urlencoding = "2.1.3"
