[package]
name = "markdown-normalizer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple for normalizing markdown files for use with other markdown tools from this repo."
repository = "https://github.com/barafael/markdown-tools"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.0"
