[package]
name = "snippet-extractor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple tool to extract code (or other) snippets marked up in normal source code."
repository = "https://github.com/barafael/markdown-tools"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
pest = "2.7.3"
pest_derive = "2.7.3"
serde = "1.0.188"
serde_json = "1.0.105"
snippet = { path = "../snippet" }
walkdir = "2.3.3"
