[package]
name = "snippet-extractor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple tool to extract code (or other) snippets marked up in normal source code."
repository = "https://github.com/barafael/markdown-tools"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.2", features = ["derive"] }
itertools = "0.12.1"
once_cell = "1.18.0"
path-dedot = "3.1.0"
regex = "1.9.4"
relative-path = { version = "1.9.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
ignore = "0.4.20"
